--- a/init.org
+++ b/init.org
@@ -312,28 +312,50 @@
 
 * 字体配置
 #+begin_src emacs-lisp :tangle lisp/init-font.el
-  (setq inhibit-compacting-font-caches t) ;; Improve performance with icons/diverse fonts
+(setq inhibit-compacting-font-caches t) ;; Improve performance with icons/diverse fonts
 
-  ;; 设置默认字体族和大小
-  (set-face-attribute 'default nil
-                    :font "Maple Mono NF CN"
-                    :height 130)
+;; 确保 all-the-icons 包已安装并加载
+(use-package all-the-icons
+  :ensure t
+  :if (display-graphic-p)
+  :config
+  (setq all-the-icons-scale-factor 1.0)
+  (setq all-the-icons-default-adjust 0))
 
-  ;; 确保 fixed-pitch face 也使用 Maple Mono NF CN
-  (set-face-attribute 'fixed-pitch nil
-                    :font "Maple Mono NF CN"
-                    :height (face-attribute 'default :height))
+;; 系统特定的字体名称
+(defvar my/font-names
+  '((darwin . ("MapleMonoNL-NF-CN" "SF Mono" "Menlo" "Monaco"))
+    (gnu/linux . ("MapleMonoNL-NF-CN" "DejaVu Sans Mono" "Monospace"))
+    (windows-nt . ("MapleMonoNL-NF-CN" "Consolas" "Monospace")))
+  "系统特定的字体名称列表")
 
-  ;; 为 CJK 字符设置字体
-  (set-fontset-font t 'han (font-spec :family "Maple Mono NF CN" 
-                                    :height (face-attribute 'default :height)))
+;; 设置默认字体族和大小
+(defun my/set-font (font-family)
+  "安全地设置字体，如果字体不可用则返回 nil"
+  (when (member font-family (font-family-list))
+    (set-face-attribute 'default nil
+                      :font font-family
+                      :height 130)
+    (set-face-attribute 'fixed-pitch nil
+                      :font font-family
+                      :height (face-attribute 'default :height))
+    (set-fontset-font t 'han (font-spec :family font-family
+                                      :height (face-attribute 'default :height)))
+    (set-face-attribute 'fixed-pitch-serif nil
+                      :font font-family
+                      :height (face-attribute 'default :height))
+    t))
 
-  ;; 确保所有等宽文本使用相同字体
-  (set-face-attribute 'fixed-pitch-serif nil
-                    :font "Maple Mono NF CN"
-                    :height (face-attribute 'default :height))
+;; 获取当前系统的字体列表
+(defun my/get-system-fonts ()
+  (or (cdr (assoc system-type my/font-names))
+      '("Monospace")))
 
-  (provide 'init-font)
+;; 按优先级尝试设置字体
+(unless (cl-some #'my/set-font (my/get-system-fonts))
+  (message "Warning: No suitable font found"))
+
+(provide 'init-font)
 #+end_src
 
 * Markdown 配置
@@ -405,7 +427,7 @@ Replaces common Markdown constructs with Unicode symbols for better readability.
 
   ;; 配置 Org table 字体
   (set-face-attribute 'org-table nil
-                     :font "Maple Mono NF CN"
+                     :font (face-attribute 'default :font)
                      :height (face-attribute 'default :height))
 
   ;; Org mode 表格对齐设置
@@ -416,7 +438,7 @@ Replaces common Markdown constructs with Unicode symbols for better readability.
   (add-hook 'org-mode-hook
             (lambda ()
               (set-face-attribute 'org-table nil
-                                :font "Maple Mono NF CN"
+                                :font (face-attribute 'default :font)
                                 :height (face-attribute 'default :height))))
                                 
   ;; 设置标题样式
